--- a/bwapp2/client/views/genjobs.ng.jade
+++ b/bwapp2/client/views/genjobs.ng.jade
@@ -201,9 +201,10 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               button.btn.btn-xs.btn-danger(ng-click='remHIT(task.tid, "H_"+task.hid)', title='Remove HIT {{task.hid}} from {{task.tid}}')
                 .fa.fa-remove
               | &nbsp;&nbsp;{{task.time | date:"yyyy/MM/dd HH:mm"}}
-            td {{task.hid}}  
-              b(ng-show='task.islive', style='color:green') Live
-              span(ng-show='!task.islive', style='color:grey') Sandbox
+            td
+              a(href='https://requester.mturk.com/mturk/manageHIT?viewableEditPane=&HITId={{task.hid}}', target='_blank') {{task.hid}}  
+                b(ng-show='task.islive', style='color:green') Live
+                span(ng-show='!task.islive', style='color:grey') Sandbox
             td Asn: {{task.asnleft}} &nbsp; {{task.reward.Amount | currency: '$'}}
             td(ng-click="stateGo('gentask',{taskId: task.tid, assignmentId: 'ASSIGNMENT_ID_NOT_AVAILABLE', workerId: 'EXAMPLE'}, true)")
               i.fa.fa-eye
@@ -240,9 +241,10 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               button.btn.btn-xs.btn-success(title='Download list of VALID links for this HIT', ng-click='dlLinks(task, true)')
                 .fa.fa-thumbs-up
               | &nbsp;{{task.time | date:"yyyy/MM/dd HH:mm"}}
-            td {{task.hid}}  
-              b(ng-show='task.islive', style='color:green') Live
-              span(ng-show='!task.islive', style='color:grey') Sandbox
+            td
+              a(href='https://requester.mturk.com/mturk/manageHIT?viewableEditPane=&HITId={{task.hid}}', target='_blank') {{task.hid}}  
+                b(ng-show='task.islive', style='color:green') Live
+                span(ng-show='!task.islive', style='color:grey') Sandbox
             td(ng-click="stateGo('gentask',{taskId: task.tid, assignmentId: 'ASSIGNMENT_ID_NOT_AVAILABLE', workerId: 'EXAMPLE'}, true)")
               i.fa.fa-eye
               | &nbsp;{{task.tid}}
