add support for type partial and full action seq. and update turk times for partial and full

--- a/bwapp2/client/views/genjobs.ng.jade
+++ b/bwapp2/client/views/genjobs.ng.jade
@@ -67,6 +67,8 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           | &nbsp;&nbsp;&nbsp;
           | Name: 
           b {{curState.name}}
+          span(ng-show='curState.type') &nbsp;&nbsp;Type:
+            b {{curState.type}}
           br
           | # Blocks: {{curState.block_meta.blocks.length}}
           | &nbsp;&nbsp;&nbsp;
