--- a/bwapp2/client/views/gentask.ng.jade
+++ b/bwapp2/client/views/gentask.ng.jade
@@ -14,13 +14,20 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       accordion-heading
         h4.panel-title Directions
       h4(style='margin-top: -14px; margin-bottom: 4px;') What would you tell a friend to do in a world with objects in the first image in order to obtain the configuration in the second image?  Use each text box to write a distinct full (single/multi) sentence alternative.  Each description must be complete on its own.
-      .well.col-sm-8.col-sm-offset-2(ng-if="curState.block_meta.decoration!='blank'")
+      .well.col-sm-8.col-sm-offset-2(ng-if="curState.type == 'partial'")
+        h4(style='margin-top: -14px; margin-bottom: 4px;') Example:
+        img.center-block(src='img/example_part.png')
+        label.mb-sm(style='color:green;border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Create a backwards C whose two-block base is just above the U in order to close it and make a circle.  Starting at the top left the blocks are McDonald's, Pepsi, Starbucks in a row.  Twitter and UPS form a vertical line just to their right.  UPS, Stella Artois, and Shell make a diagonal going southwest.  Finally, Mercedes and Shell form the base.
+        label.mb-sm(style='color:green;border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Draw the right side of a circle whose base is two blocks wide and centered above and almost touching the current structure.   Going counter-clockwise the blocks are Mercedes, Shell, Stella Artois, UPS, Twitter, Starbucks, Pepsi and McDonalds.  The top is three blocks wide, the right is two blocks long and Stella sits on a diagonal connecting the base and vertical side.
+        label.mb-sm(style='color:green;border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Draw the middle, right and top sides of the figure eight.  The top is three blocks wide, the middle and right sides are two blocks long with Stella Artois sitting on a diagonal to connect the middle and right sides.  The block positions in clockwise order are McDonald's, Pepsi, Starbucks, Twitter, UPS, Stella Artois, Shell and Mercedes.
+
+      .well.col-sm-8.col-sm-offset-2(ng-if="!curState.type && curState.block_meta.decoration!='blank'")
         h4(style='margin-top: -14px; margin-bottom: 4px;') Example:
         img.center-block(src='img/example.png')
         label.mb-sm(style='color:green;border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Take block 14 and place it next to block 17. The down right corner of block 14 should touch the upper left corner of block 17.
         label.mb-sm(style='color:green;border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Slide block 14 straight down until its right corner touches the top left corner of block 17.
         label.mb-sm(style='color:green;border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Take the block that is on top of block 5. Move it close to block 17. Place it at the same level with block 17 and on the same vertical line as block 5.
-      .well.col-sm-8.col-sm-offset-2(ng-if="curState.block_meta.decoration=='blank'")
+      .well.col-sm-8.col-sm-offset-2(ng-if="!curState.type && curState.block_meta.decoration=='blank'")
         h4(style='margin-top: -14px; margin-bottom: 4px;') Example:
         img.center-block(src='img/example_bl.png')
         label.mb-sm(style='color:green;border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Move the lone block in the top right of the board to the left of the tower at the back of the table.
@@ -71,7 +78,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         div(style='color:red;font-size:1.1em')
           .fa.fa-exclamation-triangle
           | Each description MUST describe the action completely.  
-          i(style='color:green') Only one block moves per action
+          i(ng-if="!curState.type" style='color:green') Only one block moves per action
           //-span(ng-show='notes.length > 1')
             | Ensure each alternative description is 
             b DIFFERENT.
@@ -92,11 +99,11 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               | Create a 
               b(style='color:red') COMPLETELY NEW ALTERNATIVE
               |  description of the action. 
-              i(style='color:green') Only one block moves per action
-            .col-sm-12(ng-show='!$index || ($index > 0 && notes[$index-1].length > 13)')
-              b.pull-left(ng-show='!note.length || note.length < 14', style='font-size: 16px; color: red; width:2%; float: left')
+              i(ng-if="!curState.type" style='color:green') Only one block moves per action
+            .col-sm-12(ng-show='!$index || ($index > 0 && notes[$index-1].length > 13 && !curState.type) || ($index > 0 && notes[$index-1].length > 75 && curState.type)')
+              b.pull-left(ng-show='!note.length || (!curState.type && note.length < 14) || (curState.type && note.length < 76)', style='font-size: 16px; color: red; width:2%; float: left')
                 .fa.fa-asterisk
-              b.pull-left(ng-show='note.length > 13', style='font-size: 16px; color: green; width:2%;').fa.fa-check
+              b.pull-left(ng-show='(!curState.type && note.length > 13) || (curState.type && note.length > 75)', style='font-size: 16px; color: green; width:2%;').fa.fa-check
               .form-group.has-feedback.pull-left(style='display:inline-block; width:80%;')
                 textarea.form-control(ng-if='submitter || $index < curantpass', type='text', ng-model='notes[$index]', style='padding-left: 26px;', ng-readonly='submitter || $index < curantpass')
                 textarea.form-control(ng-if='!submitter && $index == curantpass', type='text', ng-model='notes[$index]', style='padding-left: 26px;', clear-icon)
