create command job page

--- a/bwapp2/client/views/partials/top-navbar.ng.jade
+++ b/bwapp2/client/views/partials/top-navbar.ng.jade
@@ -68,6 +68,10 @@ nav.navbar.topnavbar(role="navigation")
             a(href="/gencmdexp")
               .fa.fa-terminal
               | &nbsp;Command
+          li
+            a(href="/gencmdjobs")
+              .fa.fa-terminal
+              | &nbsp;Command Jobs
         //-li.dropdown(ng-show='currentUser.profile.roles.indexOf("admin") >= 0')
           a.dropdown-toggle(data-toggle="dropdown", href="#")
             //-i.glyphicon.glyphicon-search
